<resources>
    <string name="app_name">Fisi</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Administrar</string>
    <string name="title_notifications">Historial</string>
    <string name="title_pagos">Pagos</string>
    <string name="title_documentacion">Documentacion Financiera</string>
    <string name="title_preguntasfc">Preguntas Frecuentes</string>
    <string name="title_notificaciones">Notificaciones</string>
    <string name="relleno">Su proxima factura esta por vencer\nvencera el 26.05.2022</string>
    <string name="respuesta">Respuesta</string>
    <string name="title_informacion">Informacion Personal</string>
    <string name="title_cuenta">Administrador\nEdificio A</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>